Se completo la seccion de proyectos y se arreglos los margenes al dirigirse hacia una seccion de la pagina

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!--NAVBAR-->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary py-3 sticky-top">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary py-2 sticky-top">
     <div class="container">
       <a class="navbar-brand" href="#"><img class="logo" src="img/logo-dark.svg" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -32,10 +32,10 @@
             <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#features">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="#projects">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
@@ -77,7 +77,7 @@
     <!--Services-->
     <section id="services" class="py-5">
       <div class="container">
-        <div class="row mb-5">
+        <div class="row my-5">
           <div class="col-md-8 mx-auto text-center">
             <h6 class="text-primary">SERVICES</h6>
             <h2 class="display-4">Our Services</h2>
@@ -157,7 +157,7 @@
       <div class="col-lg-6 py-5 ">
         <div class="cotainer">
           <div class="row">
-            <div class="col-md-10  m-auto text-sm-center text-md-start container">
+            <div class="col-md-10  m-auto text-sm-center text-md-start container my-5">
               <h6 class="text-primary">WHY TO CHOOSE US</h6>
               <h2 class="display-4">Best solution for your business</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente magni perferendis dolore unde nobis
@@ -201,8 +201,99 @@
         </div>
       </div>
     </section>
-
     <!--Features-->
+
+    <!--portfolio-->
+    <section id="projects" class="py-5">
+      <div class="container-fluid">
+        <div class="row my-5">
+          <div class="col-md-8 mx-auto text-center">
+            <h6 class="text-primary">PROJECTS</h6>
+            <h2 class="display-4">Our Recent Work</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente magni perferendis dolore unde nobis
+              cumque, velit rerum ad cupiditate nostrum?</p>
+          </div>
+        </div>
+        <div class="row g-3">
+
+          <div class="col-lg-4 col-sm-6">
+            <div class="project ">
+              <img src="img/pro1.jpg" alt="project image" class="img-fluid">
+              <div class="overlay">
+                <div>
+                  <h4 class="text-white">Project Title</h4>
+                  <h6 class="text-white">Website Design</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-sm-6">
+            <div class="project ">
+              <img src="img/pro2.jpg" alt="project image" class="img-fluid">
+              <div class="overlay">
+                <div>
+                  <h4 class="text-white">Project Title</h4>
+                  <h6 class="text-white">Website Design</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-sm-6">
+            <div class="project ">
+              <img src="img/pro3.jpg" alt="project image" class="img-fluid">
+              <div class="overlay">
+                <div>
+                  <h4 class="text-white">Project Title</h4>
+                  <h6 class="text-white">Website Design</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-sm-6">
+            <div class="project ">
+              <img src="img/pro4.jpg" alt="project image" class="img-fluid">
+              <div class="overlay">
+                <div>
+                  <h4 class="text-white">Project Title</h4>
+                  <h6 class="text-white">Website Design</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-sm-6">
+            <div class="project ">
+              <img src="img/pro5.jpg" alt="project image" class="img-fluid">
+              <div class="overlay">
+                <div>
+                  <h4 class="text-white">Project Title</h4>
+                  <h6 class="text-white">Website Design</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-sm-6">
+            <div class="project ">
+              <img src="img/pro6.jpg" alt="project image" class="img-fluid">
+              <div class="overlay">
+                <div>
+                  <h4 class="text-white">Project Title</h4>
+                  <h6 class="text-white">Website Design</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!--portfolio-->
+
+
 
   </main>
 
