Se agrego la seccion Price

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a class="nav-link" href="#projects">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#pricing">Pricing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Team</a>
@@ -293,6 +293,94 @@
     </section>
     <!--portfolio-->
 
+    <!--Prices-->
+    <section id="pricing" class="py-5 bg-light">
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-md-8 mx-auto text-center">
+            <h6 class="text-primary">PRINCING</h6>
+            <h2 class="display-4">Our Fair & Simple Princing</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente magni perferendis dolore unde nobis
+              cumque, velit rerum ad cupiditate nostrum?</p>
+          </div>
+        </div>
+        <div class="row g-4">
+
+          <div class="col-lg-3 col-sm-6">
+            <div class="princing card-effect text-center">
+              <h6>STARTER</h6>
+              <h2>$99</h2>
+              <hr>
+              <ul class="list-unstyled mb-4">
+                <li><i class="bx bxs-check-circle"></i>Premium Support</li>
+                <li><i class="bx bxs-check-circle"></i>+30 Web Master Tools</li>
+                <li><i class="bx bxs-check-circle"></i>Drag and Drop Builder</li>
+                <li><i class="bx bxs-check-circle"></i>Ecommerce Store</li>
+                <li><i class="bx bxs-check-circle"></i>Wordpress Plugins</li>
+              </ul>
+              <button class="btn btn-primary">Get Started</button>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <div class="princing card-effect text-center">
+              <h6>STARTER</h6>
+              <h2>$199</h2>
+              <hr>
+              <ul class="list-unstyled mb-4">
+                <li><i class="bx bxs-check-circle"></i>Premium Support</li>
+                <li><i class="bx bxs-check-circle"></i>+30 Web Master Tools</li>
+                <li><i class="bx bxs-check-circle"></i>Drag and Drop Builder</li>
+                <li><i class="bx bxs-check-circle"></i>Ecommerce Store</li>
+                <li><i class="bx bxs-check-circle"></i>Wordpress Plugins</li>
+              </ul>
+              <button class="btn btn-primary">Get Started</button>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <div class="princing card-effect text-center">
+              <h6>STARTER</h6>
+              <h2>$299</h2>
+              <hr>
+              <ul class="list-unstyled mb-4">
+                <li><i class="bx bxs-check-circle"></i>Premium Support</li>
+                <li><i class="bx bxs-check-circle"></i>+30 Web Master Tools</li>
+                <li><i class="bx bxs-check-circle"></i>Drag and Drop Builder</li>
+                <li><i class="bx bxs-check-circle"></i>Ecommerce Store</li>
+                <li><i class="bx bxs-check-circle"></i>Wordpress Plugins</li>
+              </ul>
+              <button class="btn btn-primary">Get Started</button>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <div class="princing card-effect text-center">
+              <h6>STARTER</h6>
+              <h2>$399</h2>
+              <hr>
+              <ul class="list-unstyled mb-4">
+                <li><i class="bx bxs-check-circle"></i>Premium Support</li>
+                <li><i class="bx bxs-check-circle"></i>+30 Web Master Tools</li>
+                <li><i class="bx bxs-check-circle"></i>Drag and Drop Builder</li>
+                <li><i class="bx bxs-check-circle"></i>Ecommerce Store</li>
+                <li><i class="bx bxs-check-circle"></i>Wordpress Plugins</li>
+              </ul>
+              <button class="btn btn-primary">Get Started</button>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
+        </div>
+      </div>
+    </section>
+    <!--Prices-->
 
 
   </main>
