Se agrego la seccion Team

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="#pricing">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Team</a>
+            <a class="nav-link" href="#team">Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Blog</a>
@@ -370,17 +370,79 @@
             </div>
           </div>
 
-
-
-
-
-
-
-
         </div>
       </div>
     </section>
     <!--Prices-->
+
+    <!--Team-->
+    <section id="team" class="py-5">
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-md-8 mx-auto text-center">
+            <h6 class="text-primary">Team</h6>
+            <h2 class="display-4">Meet Our Crew Menmbers</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente magni perferendis dolore unde nobis
+              cumque, velit rerum ad cupiditate nostrum?</p>
+          </div>
+        </div>
+        <div class="row">
+
+          <div class="col-lg-3 col-sm-6">
+            <div class="team-member card-effect text-center">
+              <img src="img/team1.jpg" alt="team member">
+              <h5 class="mb-0 mt-4">Sharbat Khan</h5>
+              <p>Web Developer</p>
+              <div class="social-icons">
+                <a href="#"><i class="bx bxl-facebook"></i></a>
+                <a href="#"><i class="bx bxl-twitter"></i></a>
+                <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <div class="team-member card-effect text-center">
+              <img src="img/team2.jpg" alt="team member">
+              <h5 class="mb-0 mt-4">Sharbat Khan</h5>
+              <p>Web Developer</p>
+              <div class="social-icons">
+                <a href="#"><i class="bx bxl-facebook"></i></a>
+                <a href="#"><i class="bx bxl-twitter"></i></a>
+                <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <div class="team-member card-effect text-center">
+              <img src="img/team3.jpg" alt="team member">
+              <h5 class="mb-0 mt-4">Sharbat Khan</h5>
+              <p>Web Developer</p>
+              <div class="social-icons">
+                <a href="#"><i class="bx bxl-facebook"></i></a>
+                <a href="#"><i class="bx bxl-twitter"></i></a>
+                <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <div class="team-member card-effect text-center">
+              <img src="img/team4.jpg" alt="team member">
+              <h5 class="mb-0 mt-4">Sharbat Khan</h5>
+              <p>Web Developer</p>
+              <div class="social-icons">
+                <a href="#"><i class="bx bxl-facebook"></i></a>
+                <a href="#"><i class="bx bxl-twitter"></i></a>
+                <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Team-->
 
 
   </main>
