Se completo la seccion de contacto

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <a class="nav-link" href="#team">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="#blog">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
         <button class="btn btn-primary ms-lg-3">Join Us</button>
@@ -443,6 +443,82 @@
       </div>
     </section>
     <!--Team-->
+
+    <!--Blog-->
+    <section id="blog" class="py-5 bg-light">
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-md-8 mx-auto text-center">
+            <h6 class="text-primary">Blog</h6>
+            <h2 class="display-4">Latest News From The Blog</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente magni perferendis dolore unde nobis
+              cumque, velit rerum ad cupiditate nostrum?</p>
+          </div>
+        </div>
+        <div class="row">
+
+          <div class="col-md-4">
+            <div class="blog-post card-effect">
+              <img src="img/blog1.jpg" alt="image post" class="img-fluid" >
+              <h5 class="mt-4"><a href="#">Lorem ipsum dolor sit amet.</a></h6>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, doloremque.</p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="blog-post card-effect">
+              <img src="img/blog2.jpg" alt="image post" class="img-fluid">
+              <h5 class="mt-4"><a href="#">Lorem ipsum dolor sit amet.</a></h6>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, doloremque.</p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="blog-post card-effect">
+              <img src="img/blog3.jpg" alt="image post" class="img-fluid">
+              <h5 class="mt-4"><a href="#">Lorem ipsum dolor sit amet.</a></h6>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, doloremque.</p>
+            </div>
+          </div>
+
+        </div>
+        
+      </div>
+    </section>
+    <!--Blog-->
+
+    <!--Contact-->
+    <section id="contact" class="py-5">
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-md-8 mx-auto text-center">
+            <h6 class="text-primary">CONTACT</h6>
+            <h2 class="display-4">Get In Touch</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente magni perferendis dolore unde nobis
+              cumque, velit rerum ad cupiditate nostrum?</p>
+          </div>
+        </div>
+        <form class="row g-3 justify-content-center">
+          <div class="col-md-5">
+            <input type="text" class="form-control" placeholder="Full Name">
+          </div>
+          <div class="col-md-5">
+            <input type="email" class="form-control" placeholder="E-mail">
+          </div>
+          <div class="col-md-10">
+            <input type="text" class="form-control" placeholder="Subject">
+          </div>
+          <div class="col-md-10">
+            <textarea class="form-control" placeholder="Message" rows="5"></textarea>
+          </div>
+          <div class="col-md-10 d-grid">
+            <button class="btn btn-primary">Contact</button>
+          </div>
+        </form>
+        
+      </div>
+    </section>
+    <!--Contact-->
 
 
   </main>
