--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
 
           <div class="col-md-4">
             <div class="blog-post card-effect">
-              <img src="img/blog1.jpg" alt="image post" class="img-fluid" >
+              <img src="img/blog1.jpg" alt="image post" class="img-fluid">
               <h5 class="mt-4"><a href="#">Lorem ipsum dolor sit amet.</a></h6>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, doloremque.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, doloremque.</p>
             </div>
           </div>
 
@@ -469,7 +469,7 @@
             <div class="blog-post card-effect">
               <img src="img/blog2.jpg" alt="image post" class="img-fluid">
               <h5 class="mt-4"><a href="#">Lorem ipsum dolor sit amet.</a></h6>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, doloremque.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, doloremque.</p>
             </div>
           </div>
 
@@ -477,12 +477,12 @@
             <div class="blog-post card-effect">
               <img src="img/blog3.jpg" alt="image post" class="img-fluid">
               <h5 class="mt-4"><a href="#">Lorem ipsum dolor sit amet.</a></h6>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, doloremque.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, doloremque.</p>
             </div>
           </div>
 
         </div>
-        
+
       </div>
     </section>
     <!--Blog-->
@@ -515,14 +515,71 @@
             <button class="btn btn-primary">Contact</button>
           </div>
         </form>
-        
       </div>
     </section>
     <!--Contact-->
-
-
   </main>
 
+  <!--Footer-->
+  <footer>
+    <div class="footer-top">
+      <div class="container">
+        <div class="row gy-5">
+          <div class="col-md-4">
+            <img src="img/logo-white.svg" alt="logo" class="logo">
+          </div>
+
+          <div class="col-md-2">
+            <h6 class="text-white">Brand</h6>
+            <ul class="list-unstyled">
+              <li><a href="#">About</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#princing">Princing</a></li>
+            </ul>
+          </div>
+
+          <div class="col-md-2">
+            <h6 class="text-white">More</h6>
+            <ul class="list-unstyled">
+              <li><a href="#">FAQ's</a></li>
+              <li><a href="#">Privacy & Policy</a></li>
+              <li><a href="#">Warranty</a></li>
+              <li><a href="#">Shipment</a></li>
+            </ul>
+          </div>
+
+          <div class="col-md-4">
+            <h6 class="text-white">Contact</h6>
+            <ul class="list-unstyled">
+              <li>Address: 2715 Ash Dr. San Jose, South Dakota 83475</li>
+              <li>Email: jackson.graham@example.com</li>
+              <li>Phone: (603) 555-1234</li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom py-3">
+      <div class="container">
+        <div class="row justify-content-center align-content-center">
+          <div class="col-md-6">
+            <p class="m-0">© 2024 copyright all right reserved</p>
+          </div>
+          <div class="col-md-6">
+            <div class="social-icons">
+              <a href="#"><i class="bx bxl-facebook"></i></a>
+              <a href="#"><i class="bx bxl-twitter"></i></a>
+              <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!--Footer-->
 
 
   <script src="dependencies/bootstrap/bootstrap.bundle.min.js"></script>
